updated pics manually

--- a/website/AboutMe.html
+++ b/website/AboutMe.html
@@ -44,12 +44,11 @@
 				<div class ="box2">
 					<h2>Who am I?</h2>
 					<p>
-						My path as a web & android developer was not a walk in the park, there were many obstacles in my ways and it is because of that I was able to become who I am today. I used to be an average student in high school and video game had a huge impact during my school year. However, that is a story for another time. 
+						My path as a web & android developer was not a walk in the park. There were many obstacles in my ways and it is because of that I was able to become who I am today. I used to be an average student in high school and video game had a huge impact during my school year. However, that is a story for another time. 
 						<br ><br >After high school, I decided to do something productive, which is getting a diploma in languages at Dawson college, but it was during my last year when I took an elective in computer science that I fell in love with programming. Soon after my graduation, I've applied to an university and major in computer science. Now here I am trying to change the world one step at a time with technology.	
 					</p>
 					<p>
-						All that being said, my work ethic has changed and I have been working really hard to learn as much as possible to accomplish my dream of changing the world with my superpower(coding). It's not true that I am all work and no play. I always start my morning by going to the gym to release all the stress and worries out of my mind. Nonetheless, I enjoy exploring new things and I am not scare of trying out anything outside my boundary. I once .
-						I want to try everything in this world at least once because we only have one life and might as well make the most out of it. 
+						All that being said, my work ethic has changed and I have been working really hard to learn as much as possible to accomplish my dream of changing the world with my superpower(coding). However, it's not true that I am all work and no play. I like to start my day by going to the gym to release all the stress and worries out of my mind (healthy body = healthy mind). Nonetheless, I enjoy exploring new things and I am not scare of trying out anything outside my confort zone. I once went skydiving which I thought was lame, but it actually turn out ot be fun. I want to try everything in this world at least once because we only have one life and might as well make the most out of it. 
 
 					</p>
 				</div>
@@ -107,8 +106,8 @@
 			</p>
 
 			<div class= "myEmail">
-				<img src ="https://s9.postimg.org/uxlvoi03z/mail-black-envelope-symbol.png">
-				<span >Vickelleung@gmail.com</span>
+				<a href="mailto:vickelleung@gmail.com"><img src ="https://s9.postimg.org/uxlvoi03z/mail-black-envelope-symbol.png"> </a>
+				<a href="mailto:vickelleung@gmail.com">Vickelleung@gmail.com</a>
 			</div>
 			<div class ="myNumber">
 				<img src ="https://s9.postimg.org/wdxe6ban3/telephone.png">
@@ -135,7 +134,7 @@
 			<h2>Let me help you</h2>
 			<p> If you are looking for a mentor, partner or you are interested in hiring me then I am more than happy to be of assistance. Feel free to take a peek at my resume to see what I can do and what I have done. 
 				<br ><br >
-				<a href= "test.txt" class ="resumeLink" download = "Vickel's CV"> Download my resume </a>
+				<a href= "Vickel CV 2018 English.pdf" class ="resumeLink" download = "Vickel CV"> Download my resume </a>
 			</p>
 			<br ><br ><br >
 			
