--- a/website/teaching.html
+++ b/website/teaching.html
@@ -38,40 +38,49 @@
 			</div>
 		</div>	
 	</div>
+
 		<div class ="teachWrapper">
 
 			<div class ="teachingMaterials">
-				<p>My personal notes</p>
+				<h2>My personal notes</h2>
+				<p>Here are my personal notes created during my school year that I used to tutor friends and people in need! Feel free to download my notes.</p>
 				<div class ="java">
+					<h3>Object Oriented programming with Java</h3>
+
 					<div class ="java1">	
 						<a href = "javaFiles/1_Introduction to java.pdf"> 
-							<img src="https://s9.postimg.org/3zkalylbz/java1.png" alt="java1">
+							<img src="img/java1.png" alt="java1">
+
+							<span class ="clickText"> Click for Chapter 1</span>
 						</a>
 					</div>
 
 					<div class ="java2">
 						<a href="javaFiles/2_Chapter 2 console I&O.pdf">
-							<img src ="https://s9.postimg.org/yh05djizj/java2.png" alt="java2">
-							<p class ="clickText"> Click to view notes</p>
+							<img src ="img/java2.png" alt="java2">
+							<span class ="clickText"> Click for Chapter 2</span>
 						</a>
 					</div>
 
 					<div class ="java3">
 						<a href="javaFiles/3_flow of control.pdf">
-							<img src ="https://s9.postimg.org/8lgeucovj/java3.png" alt="java3">
+							<img src ="img/java3.png" alt="java3">
+							<span class ="clickText"> Click for Chapter 3</span>
 						</a>
 					</div>
 
 					<div class ="java4">
 						<a href="javaFiles/4_Chapter 4 Define classes.pdf">
-							<img src ="https://s9.postimg.org/4cbos78rj/java4.png" alt="java4">
+							<img src ="img/java4.png" alt="java4">
+							<span class ="clickText"> Click for Chapter 4</span>
 						</a>
 					</div>
 
 
 					<div class ="java5">
 						<a href="javaFiles/5_Chapter 5 Array.pdf">
-							<img src ="https://s9.postimg.org/qbi3fexbj/java5.png" alt ="java5">
+							<img src ="img/java5.png" alt="java5">
+							<span class ="clickText">Click for Chapter 5</span>
 						</a>
 					</div>
 				</div>
@@ -79,7 +88,7 @@
 		</div>
 
 		<div class ="linkToCourse">
-			<p>Here are some useful links for concordia course and also my personal teaching materials.</p>
+			<span>Are you currently taking computer science/software engineer course at concordia? You are in luck, click on the link below to get a google drive of all course I've taken.</span>
 			<a href="https://drive.google.com/open?id=0B8a2R11fK-RoT3djcms2VXFkUWc">Concordia courses</a>
 		</div>
 
