Added php message box

--- a/website/AboutMe.html
+++ b/website/AboutMe.html
@@ -94,6 +94,9 @@
 		<div class ="skillsLevel" >
 			
 			<!-- <img id ="progLevel" src = "https://s17.postimg.org/yk7h3u3rj/meta-chart.png" > -->
+			<div class ="myskills">
+				<img src="img/progSkill.png">
+			</div>
 
 		</div>
 	</div>
@@ -106,26 +109,28 @@
 			</p>
 
 			<div class= "myEmail">
-				<a href="mailto:vickelleung@gmail.com"><img src ="https://s9.postimg.org/uxlvoi03z/mail-black-envelope-symbol.png"> </a>
+				<a href="mailto:vickelleung@gmail.com">
+					<img src="img/mail.png" alt="mailImg">
+				</a>
 				<a href="mailto:vickelleung@gmail.com">Vickelleung@gmail.com</a>
 			</div>
 			<div class ="myNumber">
-				<img src ="https://s9.postimg.org/wdxe6ban3/telephone.png">
+				<img src="img/telephone.png" alt="telephoneImg">
 				<span>(514)-815-8638</span>
 			</div>
 
 			<div class ="myLocation">
-				<img src ="https://s9.postimg.org/rs19y0u9r/facebook-placeholder-for-locate-places-on-maps.png">
-				<span>Laprairie, Quebec, Canada</span>
+				<img src="img/location.png" alt="locationImg">
+				<span>La Prairie, Quebec, Canada</span>
 			</div>
 
 			<br >
 			<div class ="linkToMedia">
 				<a href="https://github.com/VickelLeung">
-					<img src = "https://s33.postimg.org/7shohmrhb/rsz_151336527737822.png">
+					<img src="img/githubMed.png" alt="githubMed">
 				</a> 
 				<a href="https://www.linkedin.com/in/vickelLeung">
-					<img src = "https://s33.postimg.org/pvar990b3/rsz_eqphkclfwfhwvdobwlce.png">
+					<img src = "img/linked.png" alt="linkedImg">
 				</a> 
 			</div>
 		</div>
