--- a/website/project.html
+++ b/website/project.html
@@ -37,7 +37,7 @@
 				 </a> 
 			</span>
 		</div>
-	<br ><br >
+	
 
 	<div class ="proSect1">		
 		<div class ="quotes">
@@ -127,7 +127,7 @@
 							 <br >
 
 							 <div class ="projectImg">
-							 	<img src="img/Battle_Ship_Img.png" alt="shipImg">
+							 	<img src ="img/apartmentSearch.png" alt="appImg">
 							</div>
 
 							 <div class ="projectType">
@@ -157,7 +157,7 @@
 							 <br >
 
    						    <div class ="projectImg">
-							 	<img src="img/Battle_Ship_Img.png" alt="shipImg">
+							 	<!-- <img src="img/Battle_Ship_Img.png" alt="shipImg"> -->
 							</div>
 
 							 <div class ="projectType">
