--- a/website/teaching.html
+++ b/website/teaching.html
@@ -45,7 +45,7 @@
 				<h2>My personal notes</h2>
 				<p>Here are my personal notes created during my school year that I used to tutor friends and people in need! Feel free to download my notes.</p>
 				<div class ="java">
-					<h3>Object Oriented programming with Java</h3>
+					<h2>Object Oriented programming with Java</h2>
 
 					<div class ="java1">	
 						<a href = "javaFiles/1_Introduction to java.pdf"> 
@@ -84,12 +84,36 @@
 						</a>
 					</div>
 				</div>
+
+				<div class="webDevelopment">
+
+					<h2>Web Development</h2>
+
+					<!-- @@@@@@ To be deleted when done with materials @@@@@@@ -->
+					<div class ="coming Soon">
+
+						<p class="comingText">Coming Soon</p>
+
+						<span>I am currently working on these slides, they will be up sooner or later. Thank you for being patient! :D</span>
+
+					</div>
+
+					<!-- <div class ="html">
+					</div>
+
+					<div class ="javascript">
+					</div> -->
+
+				</div>
+
 			</div>
+
 		</div>
 
 		<div class ="linkToCourse">
-			<span>Are you currently taking computer science/software engineer course at concordia? You are in luck, click on the link below to get a google drive of all course I've taken.</span>
-			<a href="https://drive.google.com/open?id=0B8a2R11fK-RoT3djcms2VXFkUWc">Concordia courses</a>
+			<p class = "courseDescription">Are you currently taking computer science/software engineer course at concordia? You are in luck, click on the link below to get a google drive of all course I've taken.
+			</p>
+			<a class ="googleLink" href="https://drive.google.com/open?id=0B8a2R11fK-RoT3djcms2VXFkUWc">View all my courses</a>
 		</div>
 
 	<div class ="footer">
