fixed nav, projects, aboutme

--- a/website/project.html
+++ b/website/project.html
@@ -25,13 +25,28 @@
 	
 <body>
 	<div class ="projectWrapper">
-		<ul class ="nav">
+		<!-- <ul class ="nav">
 			<li> <a class ="btn" href ="AboutMe"> About Me</a> </li>
 			<li> <a class ="btn" href ="teaching"> Teaching materials</a> </li>
 			<li> <a class ="btn" href ="index"> Home</a> </li>
+		</ul> -->
+		<ul class ="nav">
+			<li>
+			 <a class ="custom-btn btn-12" id = "btnPersonal" href ="AboutMe"> About Me</a> 
+			</li>
+			
+			<li> 
+				<a class ="custom-btn btn-12" id = "btnTeach" href ="teaching"> Teaching materials</a> 
+			</li>
+
+			<li> 
+				<a class ="custom-btn btn-12" id = "idContact" href ="index"> Home
+				</a>
+			 </li>
 		</ul>
+
 		<!-- ============= start of main part==================== -->
-		<div class = "gitHub">
+		<div class = "textTitle">
 				<span class ="titleFont">My projects
 				<a href="https://github.com/VickelLeung"><img src = "https://s17.postimg.org/myxavov0f/Git_Hub-_Mark-_Light-64px.png">
 				 </a> 
@@ -49,8 +64,14 @@
 </div>
 
 	<div class ="contentProject">
+
+		<div class="projectIntro">
+				<h2>What can I do?</h2>
+				<p>I really enjoy programming mobile and web application. </p>
+		</div>
+
 		<div class ="projectDone">
-			<h4>Projects that I have finished</h4>
+			<h2>Projects that I have finished</h2>
 				<div class ="project1Done"> 
 							
 							<div class ="projectTitle">
@@ -97,7 +118,7 @@
 							 <br >
 
 							 <div class ="projectImg">
-							 	<img src="img/Battle_Ship_Img.png" alt="shipImg">
+							 	<img src="img/tictactoeMain.png" alt="tictactoeImg">
 							</div>
 
 							 <div class ="projectType">
@@ -179,7 +200,7 @@
 		</ol>	 -->
 		
 			<div class ="projectWip">	
-				<h4>Projects I am currently working on</h4>
+				<h2>Projects I am currently working on</h2>
 				
 
 				<div class ="project1Wip"> 
@@ -221,6 +242,7 @@
 
 			
 			</div>
+
 		
 		
 	</div>
