--- a/website/teaching.html
+++ b/website/teaching.html
@@ -25,11 +25,27 @@
 	
 	<body>
 	<div class ="teachIntoWrapper">
-		<ul class ="nav">
+		<!-- <ul class ="nav">
 			<li> <a class ="btn" href ="AboutMe"> About Me</a> </li>
 			<li> <a class ="btn" href ="project"> Project</a> </li>
 			<li> <a class ="btn" href ="index"> Home</a> </li>
+		</ul> -->
+
+		<ul class ="nav">
+			<li>
+			 <a class ="custom-btn btn-12" id = "btnPersonal" href ="AboutMe"> About Me</a> 
+			</li>
+
+			<li> 
+				<a class ="custom-btn btn-12"  href ="project"> Projects</a>
+			</li>
+		
+			<li> 
+				<a class ="custom-btn btn-12" id = "idContact" href ="index"> Home
+				</a>
+			 </li>
 		</ul>
+
 		<span class ="titleFont">Teaching Materials</span>
 		<br >
 		<div class ="proSect3">		
@@ -111,7 +127,7 @@
 		</div>
 
 		<div class ="linkToCourse">
-			<p class = "courseDescription">Are you currently taking computer science/software engineer course at concordia? You are in luck, click on the link below to get a google drive of all course I've taken.
+			<p class = "courseDescription">Are you currently taking computer science/software engineer Course at concordia? You are in luck, click on the link below to get a google drive of all course I've taken.
 			</p>
 			<a class ="googleLink" href="https://drive.google.com/open?id=0B8a2R11fK-RoT3djcms2VXFkUWc">View all my courses</a>
 		</div>
@@ -124,3 +140,14 @@
 
 
 </html>
+
+
+<!-- link shares
+
+<a href="mailto:?&subject=Awesome programming materials!&body=Hey!%20Come%20check%20out%20all%20these%20free%20and%20super%20duper%20helpful%20programming%20materials.">Send Email</a>
+
+		<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//vickelleung.com/teaching">Share on Facebook</a>
+
+	<a href="https://plus.google.com/share?url=http%3A//vickelleung.com/teaching">Share on Google+</a>
+
+ -->
