modified nav and contact form

--- a/website/AboutMe.html
+++ b/website/AboutMe.html
@@ -26,7 +26,9 @@
 <body>
 
 <div class=aboutWrapper>
-	<div class="navWrapper">
+	
+	<div class ="proSect2">	
+		
 		<ul class ="nav">
 					<li> 
 						<a class ="custom-btn btn-12"  href ="project"> Projects</a>
@@ -41,15 +43,14 @@
 						</a>
 					 </li>
 		</ul>
-	</div>
-	<div class ="proSect2">	
-		
+
 			<div class = "personalText">
 				<h2>Wow a whole page just about me!</h2>
 			<h3> Vickel Leung :)</h3>
 				<img id ="avatar" src ="https://s17.postimg.org/y5dm3h64v/funny-cat-pictures-with-captions-44.jpg">
 			</div>
 	</div>	
+</div>
 
 	<div class ="contentAbout">
 		<div class ="myIntro">
@@ -57,7 +58,7 @@
 					<div class ="box2">
 						<h2>Who am I?</h2>
 						<p>
-							My path as a web & android developer was not a walk in the park. There were many obstacles in my ways and it is because of that I was able to become who I am today. I used to be an average student in high school and video game had a huge impact during my school year. However, that is a story for another time. 
+							My path as a web & android developer was not a walk in the park. There were many obstacles in my ways from financial issues to my father having stroke. Nonetheless, it is because of that I was able to become who I am today. I used to be an average student in high school and video game had a huge impact during my school year. However, that is a story for another time. 
 							<br ><br >After high school, I decided to do something productive, which is getting a diploma in languages at Dawson college, but it was during my last year when I took an elective in computer science that I fell in love with programming. Soon after my graduation, I've applied to an university and major in computer science. Now here I am trying to change the world one step at a time with technology.	
 						</p>
 						<p>
@@ -161,7 +162,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+
 		<div class ="footer">
 			<p> 2018 © All Rights Reserved | Privacy Policy | made with pure ♥ </p>
 		</div>
