updated teaching materials
on hover download will pop up

--- a/website/project.html
+++ b/website/project.html
@@ -67,7 +67,7 @@
 
 		<div class="projectIntro">
 				<h2>What can I do?</h2>
-				<p>I really enjoy programming mobile and web application. </p>
+				<p>I focus mainly on mobile and web development, I have a good knowledge of html, css. </p>
 		</div>
 
 		<div class ="projectDone">
