added onclick image link - projects

--- a/website/index.html
+++ b/website/index.html
@@ -187,7 +187,7 @@
 								My Projects 
 							</span>
 							<br >
-								<span>(Click on <img src ="img/project_Github.png" alt ="githubCat")> for source code)</span>
+								<span>(Click on <img src ="img/project_Github.png" alt ="githubCat")> or images for source code)</span>
 						</h6> 
 					
 						<div class ="project1"> 
@@ -208,7 +208,9 @@
 							<br >
 
 							<div class ="projectImg">
-								<img src="img/hangmanImg.png" alt="hangmanImg">
+								<a href="https://github.com/VickelLeung/Hangman_2.0_Android" target="_blanc">
+									<img src="img/hangmanImg.png" alt="hangmanImg">
+								</a>
 							</div>
 
 
@@ -244,7 +246,9 @@
 							<br >
 
 							<div class ="projectImg">
-								<img src="img/tictactoeMain.png" alt="tictactoeImg">
+								<a href="https://github.com/VickelLeung/TicTacToe_2.0_Android" target="_blanc">
+									<img src="img/tictactoeMain.png" alt="tictactoeImg">
+								</a>
 							</div>
 
 							 <div class ="projectType">
@@ -274,7 +278,9 @@
 							<br >
 
 							<div class ="projectImg">
-								<img src="img/riskImg.jpg" alt="riskImg">
+								<a href="https://github.com/VickelLeung/Risk-game" target="_blanc">
+									<img src="img/riskImg.jpg" alt="riskImg">
+								</a>
 							</div>
 
 
@@ -303,7 +309,9 @@
 							<br >
 
 							<div class ="projectImg">
-								<img src="img/pixelPenguins.png" alt="pixelPengImg">
+								<a href="https://github.com/VickelLeung/PixelPenguins" target="_blanc">
+									<img src="img/pixelPenguins.png" alt="pixelPengImg">
+								</a>
 							</div>
 
 							 <div class ="projectType">
@@ -329,8 +337,9 @@
 							<br >
 
 							<div class ="projectImg">
-
-								<img src ="img/apartmentSearch.png" alt="appImg">
+								<a href="https://github.com/VickelLeung/apartment-search" target="_blanc">		
+									<img src ="img/apartmentSearch.png" alt="appImg">
+								</a>
  							</div>
 
 
@@ -361,7 +370,9 @@
 							 <br >
 
 							 <div class ="projectImg">
-							 	<img src="img/Battle_Ship_Img.png" alt="shipImg">
+							 	<a href="https://github.com/VickelLeung/Battleship-School-project-" target="_blanc">
+							 		<img src="img/Battle_Ship_Img.png" alt="shipImg">
+							 	</a>
 							</div>
 
 							 <div class ="projectType">
