change main background page

--- a/website/project.html
+++ b/website/project.html
@@ -249,7 +249,7 @@
 	<!-- ============= end of main part==================== -->
 	
 	<div class ="footer">
-		<p> 2018 © All Rights Reserved  | Privacy Policy | made with pure ♥ </p>
+		<p> 2018 © All Rights Reserved  | Privacy Policy | made with pure ♥ by Vickel</p>
 	</div>
 
 	</body>
