--- a/website/teaching.html
+++ b/website/teaching.html
@@ -133,7 +133,7 @@
 		</div>
 
 	<div class ="footer">
-		<p> 2018 © All Rights Reserved | Privacy Policy | made with pure ♥ </p>
+		<p> 2018 © All Rights Reserved | Privacy Policy | made with pure ♥ by Vickel</p>
 	</div>
 
 	</body>
