--- a/website/AboutMe.html
+++ b/website/AboutMe.html
@@ -164,7 +164,7 @@
 	</div>
 
 		<div class ="footer">
-			<p> 2018 © All Rights Reserved | Privacy Policy | made with pure ♥ </p>
+			<p> 2018 © All Rights Reserved | Privacy Policy | made with pure ♥ by Vickel </p>
 		</div>
 </body>
 
