--- a/website/index.html
+++ b/website/index.html
@@ -137,11 +137,13 @@
 			
 
 
-		 <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 		
 
 		<!-- ============= start of main part==================== -->
-		
+
+
+		<div class = "png1">
+
 		<div class ="titleText">
 			<span class ="myName">Vickel Leung</span>
 			<p >web & android developer</p>
@@ -151,17 +153,11 @@
 						<img src="img/githubMed.png" alt="githubMed">
 					</a> 
 					<a href="https://www.linkedin.com/in/vickelLeung">
-						<img src = "img/linked.png" alt="linkedImg">
+						<img src = "img/mainLinkedin.png" alt="linkedImg">
 					</a> 
 				</div>
 		</div>
-	
-		<div id='stars'></div>
-					<div id='stars2'></div>
-					<div id='stars3'></div>
 
-		<div class = "png1">
-		
 			<div class ="ptext">
 				<span class = "border">
 					<h2>
@@ -175,6 +171,11 @@
 				</span>
 			</div>		
 		</div>
+
+		<div id='stars'></div>
+					<div id='stars2'></div>
+					<div id='stars3'></div>
+
 	</div>
 </div>
 
@@ -446,7 +447,7 @@
 								<br >
 								<div class ="linkToMedia">
 									<a href="https://github.com/VickelLeung">
-										<img src="img/githubMed.png" alt="githubMed">
+										<img src="img/contactgithub.png" alt="githubMed">
 									</a> 
 									<a href="https://www.linkedin.com/in/vickelLeung">
 										<img src = "img/linked.png" alt="linkedImg">
@@ -485,7 +486,7 @@
 		</div>
 </div>
 		<div class ="footer">
-				<p> 2018 © All Rights Reserved | Privacy Policy | made with pure ♥ </p>
+				<p> 2018 © All Rights Reserved | Privacy Policy | made with pure ♥ by Vickel</p>
 		</div>
 		<!-- ============= end of main part==================== -->
 	
