updated project & teachers

--- a/website/AboutMe.html
+++ b/website/AboutMe.html
@@ -87,6 +87,15 @@
 					<li>Never have I even stepped my foot outside of Canada, I plan to change that soon. (Ontario is the furthest I went)</li>
 				</ol>
 			</div>
+
+				<!-- for chabot, might not implement it -->
+					<!-- <iframe
+					    width="350"
+					    height="430"
+					    src="https://console.dialogflow.com/api-client/demo/embedded/e3b997c2-aea2-49e5-92b4-78b232c11c20">
+					</iframe> -->
+
+
 		</div>
 
 		<div class ="myTaste">
@@ -143,7 +152,7 @@
 				<br >
 				<div class ="linkToMedia">
 					<a href="https://github.com/VickelLeung">
-						<img src="img/githubMed.png" alt="githubMed">
+						<img src="img/contactgithub.png" alt="githubMed">
 					</a> 
 					<a href="https://www.linkedin.com/in/vickelLeung">
 						<img src = "img/linked.png" alt="linkedImg">
