--- a/website/index.html
+++ b/website/index.html
@@ -252,6 +252,17 @@
 								</a>
 							</div>
 
+							<div class ="linkToGame">
+								<a href="https://appetize.io/app/4jz2byk77cupa64e87tx4gat0w "
+								target="_blanc">
+									<p class ="linkText"> 
+										<img src="img/game_control.png" alt="gameControl">
+										<em>Click to play game</em>
+									</p>
+								</a>
+							</div>
+
+
 							 <div class ="projectType">
 							 	<span class ="personalColor">(Personal project)</span> - Jan 2018
 							 </div>
