--- a/website/teaching.html
+++ b/website/teaching.html
@@ -25,11 +25,6 @@
 	
 	<body>
 	<div class ="teachIntoWrapper">
-		<!-- <ul class ="nav">
-			<li> <a class ="btn" href ="AboutMe"> About Me</a> </li>
-			<li> <a class ="btn" href ="project"> Project</a> </li>
-			<li> <a class ="btn" href ="index"> Home</a> </li>
-		</ul> -->
 
 		<ul class ="nav">
 			<li>
@@ -46,9 +41,8 @@
 			 </li>
 		</ul>
 
-		<span class ="titleFont">Teaching Materials</span>
-		<br >
-		<div class ="proSect3">		
+		<div class ="proSect3">	
+			<span class ="titleFont">Teaching Materials</span>	
 			<div class ="quotes">
 				<p>"Teaching is the highest form of understanding." <br ><br > - Aristotle</p>
 			</div>
@@ -59,7 +53,7 @@
 
 			<div class ="teachingMaterials">
 				<h2>My personal notes</h2>
-				<p>Here are my personal notes created during my school year that I used to tutor friends and people in need! Feel free to download my notes.</p>
+				<p>Below are my personal notes that I created during my school year that I used to tutor friends and people in need! Feel free to download my notes.</p>
 				<div class ="java">
 					<h2>Object Oriented programming with Java</h2>
 
@@ -91,7 +85,6 @@
 							<span class ="clickText"> Click for Chapter 4</span>
 						</a>
 					</div>
-
 
 					<div class ="java5">
 						<a href="javaFiles/5_Chapter 5 Array.pdf">
