--- a/website/AboutMe.html
+++ b/website/AboutMe.html
@@ -58,11 +58,14 @@
 					<div class ="box2">
 						<h2>Who am I?</h2>
 						<p>
-							My path as a web & android developer was not a walk in the park. There were many obstacles in my ways from financial issues to my father having stroke. Nonetheless, it is because of that I was able to become who I am today. I used to be an average student in high school and video game had a huge impact during my school year. However, that is a story for another time. 
-							<br ><br >After high school, I decided to do something productive, which is getting a diploma in languages at Dawson college, but it was during my last year when I took an elective in computer science that I fell in love with programming. Soon after my graduation, I've applied to an university and major in computer science. Now here I am trying to change the world one step at a time with technology.	
+							&emsp;&emsp;My path as a web & android developer was not a walk in the park. There were many obstacles in my ways from financial issues to my father having stroke. Nonetheless, it is because of that I was able to become who I am today. I used to be an average student in high school and video game had a huge impact during my school year. However, that is a story for another time. 
+							<br ><br >
+							&emsp;&emsp;After high school, I decided to do something productive, which is getting a diploma in languages at Dawson college, but it was during my last year when I took an elective in computer science that I fell in love with programming. Soon after my graduation, I've applied to an university and major in computer science. Now here I am trying to change the world one line code at a time.	
 						</p>
 						<p>
-							All that being said, my work ethic has changed and I have been working really hard to learn as much as possible to accomplish my dream of changing the world with my superpower(coding). However, it's not true that I am all work and no play. I like to start my day by going to the gym to release all the stress and worries out of my mind (healthy body = healthy mind). Nonetheless, I enjoy exploring new things and I am not scare of trying out anything outside my confort zone. I once went skydiving which I thought was lame, but it actually turn out ot be fun. I want to try everything in this world at least once because we only have one life and might as well make the most out of it. 
+							&emsp;&emsp;All that being said, my work ethic has changed and I have been working really hard to learn as much as possible to accomplish my dream of changing the world with my superpower(coding). However, it's not true that I am all work and no play. I like to start my day by going to the gym to release all the stress and worries out of my mind (healthy body = healthy mind). 
+							<br ><br >
+							&emsp;&emsp;Nonetheless, I enjoy exploring new things and I am not scare of trying out anything outside my confort zone. I once went skydiving which I thought was lame, but it actually turn out ot be fun. I want to try everything in this world at least once because we only have one life and might as well make the most out of it. 
 
 						</p>
 					</div>
@@ -104,12 +107,11 @@
 				<div class ="box3">
 					<h2>My Education & Skillset</h2>
 					<p>Here is a list of all my education and what skill I can do.<br >Concordia University : Bachelor of Computer Science 
-
+				
 					 <br>
 					 Dawson College: DEC in Art, Letter and Communication – Language Profil
 					 	<br>
-					 	Nothing special happened in those 2 years, Excepts I learned a lot of 
-					 	languages, not programming of course.
+					 	Nothing much happened in those 2 years, I did however learned a lot of languages and made some good memories.
 					</p>
 
 				</div>
