added new nagivation bar

--- a/website/AboutMe.html
+++ b/website/AboutMe.html
@@ -14,6 +14,7 @@
 		<link rel ="shortcut icon" type="image/png" href="favicon.png"/>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="script.js"></script>
 
 		<script>
 		    $(document).ready(function(){ 
@@ -28,21 +29,22 @@
 <div class=aboutWrapper>
 	
 	<div class ="proSect2">	
-		
-		<ul class ="nav">
-					<li> 
-						<a class ="custom-btn btn-12"  href ="project"> Projects</a>
-					</li>
-					
-					<li> 
-						<a class ="custom-btn btn-12" id = "btnTeach" href ="teaching"> Teaching materials</a> 
-					</li>
-
-					<li> 
-						<a class ="custom-btn btn-12" id = "idContact" href ="index"> Home
-						</a>
-					 </li>
-		</ul>
+		<div id="up">
+			<a href="up"></a>
+		</div>
+			<nav>
+				  <ul>
+				    <li>
+				      <a href="AboutMe">About me</a>
+				    </li>
+				    <li>
+				      <a href="project">Projects</a>
+				    </li>
+				    <li>
+				      <a href="teaching">teaching</a>
+				    </li>
+				  </ul>
+				</nav>	
 
 			<div class = "personalText">
 				<h2>Wow a whole page just about me!</h2>
@@ -172,10 +174,11 @@
 				
 			</div>
 		</div>
+		<a id ="btnUp" href ="#up"> <img src ="https://s9.postimg.org/v2busl0lb/up_Arrow.png"></a>
 	</div>
 
 		<div class ="footer">
-			<p> 2018 © All Rights Reserved | Privacy Policy | made with pure ♥ by Vickel </p>
+			<p> 2018 © All Rights Reserved | Privacy Policy | made with pure <a href ="https://www.youtube.com/watch?v=WhZljqLfGhc">♥</a> by Vickel </p>
 		</div>
 </body>
 
