added animation with aos

--- a/website/AboutMe.html
+++ b/website/AboutMe.html
@@ -35,7 +35,7 @@
 			<nav>
 				  <ul>
 				    <li>
-				      <a href="AboutMe">About me</a>
+				      <a href="index">Home</a>
 				    </li>
 				    <li>
 				      <a href="project">Projects</a>
@@ -178,9 +178,8 @@
 	</div>
 
 		<div class ="footer">
-			<p> 2018 © All Rights Reserved | Privacy Policy | made with pure <a href ="https://www.youtube.com/watch?v=WhZljqLfGhc">♥</a> by Vickel </p>
+			<p> 2018 © All Rights Reserved | Privacy Policy | made with pure <a href ="https://www.youtube.com/watch?v=s0JD8pOgD1s">♥</a> by Vickel </p>
 		</div>
 </body>
-
 
 </html>
