--- a/website/teaching.html
+++ b/website/teaching.html
@@ -11,6 +11,7 @@
 			Vickel Leung
 		</title>
 		<link rel ="stylesheet" type ="text/css" href ="style.css">
+		<link rel ="stylesheet" type ="text/css" href ="aos.css">
 		<link rel ="shortcut icon" type="image/png" href="favicon.png"/>	
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -59,7 +60,7 @@
 				<div class ="java">
 					<h2>Object Oriented programming with Java</h2>
 
-					<div class ="java1">	
+					<div class ="java1" data-aos="flip-left" data-aos-duration="1200">	
 						<a href = "javaFiles/1_Introduction to java.pdf"> 
 							<img src="img/java1.png" alt="java1">
 
@@ -67,28 +68,28 @@
 						</a>
 					</div>
 
-					<div class ="java2">
+					<div class ="java2" data-aos="flip-left" data-aos-duration="1200" data-aos-delay="300">
 						<a href="javaFiles/2_Chapter 2 console I&O.pdf">
 							<img src ="img/java2.png" alt="java2">
 							<span class ="clickText"> Click for Chapter 2</span>
 						</a>
 					</div>
 
-					<div class ="java3">
+					<div class ="java3" data-aos="flip-left" data-aos-duration="1200" data-aos-delay="600">
 						<a href="javaFiles/3_flow of control.pdf">
 							<img src ="img/java3.png" alt="java3">
 							<span class ="clickText"> Click for Chapter 3</span>
 						</a>
 					</div>
 
-					<div class ="java4">
+					<div class ="java4" data-aos="flip-left" data-aos-duration="1200" data-aos-delay="900">
 						<a href="javaFiles/4_Chapter 4 Define classes.pdf">
 							<img src ="img/java4.png" alt="java4">
 							<span class ="clickText"> Click for Chapter 4</span>
 						</a>
 					</div>
 
-					<div class ="java5">
+					<div class ="java5" data-aos="flip-left" data-aos-duration="1200" data-aos-delay="1200">
 						<a href="javaFiles/5_Chapter 5 Array.pdf">
 							<img src ="img/java5.png" alt="java5">
 							<span class ="clickText">Click for Chapter 5</span>
@@ -132,6 +133,11 @@
 	<div class ="footer">
 		<p> 2018 © All Rights Reserved | Privacy Policy | made with pure ♥ by Vickel</p>
 	</div>
+
+	<script type="text/javascript" src="aos.js"></script>
+	<script>
+	AOS.init();
+	</script>
 
 	</body>
 
